fix: page height on mobile devices

--- a/src/app/_landing.scss
+++ b/src/app/_landing.scss
@@ -2,6 +2,8 @@
 
 .p-landing {
   display: grid;
+  height: 100vh;
+  height: 100dvh;
 
   &__main {
     padding: 128px 32px 0 32px;
